--- a/client/game/src/components/Chance.css
+++ b/client/game/src/components/Chance.css
@@ -1,35 +1,97 @@
+.mainBoxContainer {
+  margin-top: 30px;
+  height: 400px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: #f5deb3;
+  background-image: url("../../assets/treasure.jpg");
+  background-image: url("../../assets/background.jpg");
+  /* background-image: url("../../assets/cave.avif"); */
+  /* background-size: cover; */
+  /* background-repeat: no-repeat; */
+  /* background-size: 100%; */
+  background-position: center;
+}
+
 .boxContainer {
   height: 200px;
   width: 200px;
-  border: 1px solid red;
+  margin-top: 130px;
+  top: 50px;
+  left: 24px;
   position: relative;
+  animation-name: mainBox;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-delay: 2s;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes mainBox {
+  0% {
+    margin-top: 130px;
+  }
+  50% {
+    margin-top: 115px;
+  }
+  100% {
+    margin-top: 100px;
+  }
 }
 
 .box {
-  height: 130px;
-  width: 150px;
-  border: 1px solid green;
+  height: 90px;
+  width: 100px;
   position: absolute;
   top: 56px;
   left: 20px;
+  z-index: 1;
+  background-image: url("../../assets/wood.jpg");
+  background-size: cover;
+  background-position: center;
   background-color: #341e07;
-  border: 10px solid gray;
   border-top: none;
-  border-top-right-radius: 10px;
+  border: 10px solid transparent;
+  border-top: 0px solid;
+  border-image: url("../../assets/wood-border.jpeg") 30 round;
 }
 
 .boxCap {
-  height: 50px;
-  width: 170px;
+  height: 30px;
+  width: 110px;
   position: absolute;
   left: 20px;
-  top: 5px;
+  top: 25px;
+  z-index: 1;
   background-color: #341e07;
   border: 5px solid gray;
   border-bottom: none;
+  transform-origin: bottom left;
+  background-image: url("../../assets/wood.jpg");
+  background-size: cover;
+  background-position: center;
+  border: 10px solid transparent;
+  border-bottom: none;
+  border-image: url("../../assets/wood-border.jpeg") 30 round;
+  transition: 0.8s;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
-  transform-origin: bottom left;
-  /* transform: rotate(-110deg); */
-  transition: 0.8s;
+  border-right: none;
+}
+
+.points {
+  position: absolute;
+  left: 23%;
+  z-index: 0;
+  background: blue;
+  border-radius: 50%;
+  transition: ease-in-out 0.9s;
+  box-shadow: 0 0 30px 10px blue;
+}
+
+.textPoint {
+  transition: ease-in-out 0.2;
 }
