--- a/client/game/src/components/Chance.css
+++ b/client/game/src/components/Chance.css
@@ -7,8 +7,8 @@
   justify-content: flex-end;
   align-items: center;
   background-color: #f5deb3;
-  background-image: url("../../assests/treasure.jpg");
-  background-image: url("../../assests/background.jpg");
+  /* background-image: url("../../assets/treasure.jpg"); */
+  background-image: url("../../assets/background.jpg");
   /* background-image: url("../../assets/cave.avif"); */
   /* background-size: cover; */
   /* background-repeat: no-repeat; */
@@ -49,14 +49,14 @@
   top: 56px;
   left: 20px;
   z-index: 1;
-  background-image: url("../../assests/wood.jpg");
+  background-image: url("../../assets/wood.jpg");
   background-size: cover;
   background-position: center;
   background-color: #341e07;
   border-top: none;
   border: 10px solid transparent;
   border-top: 0px solid;
-  border-image: url("../../assests/wood-border.jpg") 30 round;
+  border-image: url("../../assets/wood-border.jpg") 30 round;
 }
 
 .boxCap {
@@ -75,7 +75,7 @@
   background-position: center;
   border: 10px solid transparent;
   border-bottom: none;
-  border-image: url("../../assests/wood-border.jpg") 30 round;
+  border-image: url("../../assets/wood-border.jpg") 30 round;
   transition: 0.8s;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
