--- a/client/game/src/components/Chance.css
+++ b/client/game/src/components/Chance.css
@@ -7,12 +7,7 @@
   justify-content: flex-end;
   align-items: center;
   background-color: #f5deb3;
-  background-image: url("../../assets/treasure.jpg");
-  background-image: url("../../assets/background.jpg");
-  /* background-image: url("../../assets/cave.avif"); */
-  /* background-size: cover; */
-  /* background-repeat: no-repeat; */
-  /* background-size: 100%; */
+  background-image: url("../../assests/background.jpg");
   background-position: center;
 }
 
@@ -49,14 +44,14 @@
   top: 56px;
   left: 20px;
   z-index: 1;
-  background-image: url("../../assets/wood.jpg");
+  background-image: url("../../assests/wood.jpg");
   background-size: cover;
   background-position: center;
   background-color: #341e07;
   border-top: none;
   border: 10px solid transparent;
   border-top: 0px solid;
-  border-image: url("../../assets/wood-border.jpeg") 30 round;
+  border-image: url("../../assests/wood-border.jpg") 30 round;
 }
 
 .boxCap {
@@ -70,12 +65,12 @@
   border: 5px solid gray;
   border-bottom: none;
   transform-origin: bottom left;
-  background-image: url("../../assets/wood.jpg");
+  background-image: url("../../assests/wood.jpg");
   background-size: cover;
   background-position: center;
   border: 10px solid transparent;
   border-bottom: none;
-  border-image: url("../../assets/wood-border.jpeg") 30 round;
+  border-image: url("../../assests/wood-border.jpg") 30 round;
   transition: 0.8s;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
