--- a/client/game/src/components/Chance.css
+++ b/client/game/src/components/Chance.css
@@ -1,21 +1,22 @@
 .mainBoxContainer {
   margin-top: 30px;
-  height: 400px;
-  width: 500px;
+  height: 300px;
+  width: 300px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
   background-color: #f5deb3;
   background-image: url("../../assets/background.jpg");
   background-position: center;
+  margin-bottom: 10px;
 }
 
 .boxContainer {
   height: 200px;
   width: 200px;
-  margin-top: 130px;
-  top: 50px;
+  margin-top: 0px;
+  top: -60px;
   left: 24px;
   position: relative;
   animation-name: mainBox;
