--- a/client/game/src/components/Chance.css
+++ b/client/game/src/components/Chance.css
@@ -7,16 +7,13 @@
   justify-content: flex-start;
   align-items: center;
   background-color: #f5deb3;
-  /* background-image: url("../../assets/treasure.jpg"); */
-  background-image: url("../../assets/background.jpg");
-  /* background-image: url("../../assets/cave.avif"); */
-  /* background-size: cover; */
-  /* background-repeat: no-repeat; */
-  /* background-size: 100%; */
   background-image: url("../../assets/background.jpg");
   background-position: center;
   margin-bottom: 10px;
+  background: transparent;
 }
+
+
 
 .boxContainer {
   height: 200px;
@@ -60,7 +57,6 @@
   border-top: 0px solid;
 
   border-image: url("../../assets/wood-border.jpg") 30 round;
-
 }
 
 .boxCap {
